<resources>
    <string name="app_name">LabourAlert</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Setting</string>
    <string name="ok">ok</string>
    <string name="alert_no_internet">No internet connection try again later !</string>
    <string name="admob_app_id">ca-app-pub-8785326228290155~7489316207</string>
    <string name="banner_home_footer">ca-app-pub-3850953899146070/9603700155</string>
    <string name="interstitial_full_screen">ca-app-pub-3850953899146070/5022576878</string>
    <string name="rewarded_video">ca-app-pub-8785326228290155/4315879023</string>
    <string name="alert_message_error">Something went wrong please try after sometime.</string>
    <string name="alert_network_error">Network error! Try after sometime.</string>
    <string name="alert_some_error">Something went wrong, try again</string>
    <string name="alert_no_connection">No internet connection</string>
    <string name="labour_alerts">LABOUR ALERTS</string>
    <string name="labouralerts_com_is_a_service_that_allow_users_to_receive_alerts_about_employment_loss_notificaiton_near_you">
        Labouralerts.com is a service that allow users to receive alerts about employment loss notificaiton near you.
    </string>
    <string name="log_in">LOG IN</string>
    <string name="view_results">VIEW RESULTS</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="_login_small">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back">Back</string>
    <string name="system_features">System features:</string>
    <string name="unlimited_mobile_and_website_advanced_access">- Unlimited mobile and website advanced access.</string>
    <string name="search_nationwide_database">- Search nationwide database.</string>
    <string name="create_email_and_mobile_notifications">- Create email and mobile notifications.</string>
    <string name="mobile_or_website_charts_and_graphs">- Mobile or website Charts and Graphs.</string>
    <string name="subscription_options">Subscription Options:</string>
    <string name="free_14_days_trial">Free 14 Days Trial</string>
    <string name="one_time_free_trial">One Time Free Trial</string>
    <string name="mobile_access">Mobile Access</string>
    <string name="_159_monthly">$159 Monthly</string>
    <string name="quaterly_acess">Quaterly Acess</string>
    <string name="_249_every_3_months">$249 every 3 months</string>
    <string name="_6_months_access">6 Months Access</string>
    <string name="_399_every_6_months">$419 every 6 months</string>
    <string name="yearly_access">Yearly Access</string>
    <string name="_799_every_12_months">$849 every 12 months</string>
    <string name="more_details">More Details</string>
    <string name="restore_purchases">Restore Purchases</string>
    <string name="menu_search">Search</string>
    <string name="menu_advanced_search">Advanced Search</string>
    <string name="menu_top_10">Top 10</string>
    <string name="title_top_10">Top 10 This Month</string>
    <string name="menu_alert_notification">Alert Notification</string>
    <string name="menu_alert_manager">Alert Manager</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_account">Account</string>
    <string name="menu_about">About</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_terms_and_conditions">Terms and Conditions</string>
    <string name="menu_log_out">Log Out</string>
    <string name="labor_alerts">Labor Alerts</string>
    <string name="menu_upgrade_account">Upgrade Account</string>
    <string name="label_company_city_state">Company, city or state</string>
    <string name="label_search">Search</string>
    <string name="label_advance_search">Advance Search</string>
    <string name="label_subscription">Subscription</string>
    <string name="label_advanced">Advanced</string>
    <string name="label_about_us">About Us</string>
    <string name="label_update_password">Update Password:</string>
    <string name="hint_current_password">Current Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_re_validate_password">Re-Validate Password</string>
    <string name="hint_password_must_contain_1_upper_case_1_number_and_1_symbol">Password must contain: 1 Upper case, 1
        number and 1 Symbol
    </string>
    <string name="label_chnage_password">Change Password</string>
    <string name="label_company">Company</string>
    <string name="hint_company">Company</string>
    <string name="label_states">States</string>
    <string name="hint_states">States</string>
    <string name="label_years">Years</string>
    <string name="label_months">Months</string>
    <string name="hint_start">Start</string>
    <string name="hint_end">End</string>
    <string name="label_city">City</string>
    <string name="hint_city">City</string>
    <string name="label_country">Country</string>
    <string name="hint_country">Country</string>
    <string name="label_gm_lordstown_closure">GM Lordstown Closure</string>
    <string name="label_result">Result</string>
    <string name="label_graph">Graph</string>
    <string name="hint_confirm_email">Confirm Email</string>
    <string name="hint_by_tapping_sign_up_amp_accept_you_agree_to_the_terms_of_service_and_privacy_policy">
        <![CDATA[By tapping Sign Up & Accept, you agree to the <font color=\\'#53b9e9\\'>Terms of Service</font> and <font color=\\'#53b9e9\\'>Privacy Policy</font>.]]></string>
    <string name="label_sign_up_amp_accept"><![CDATA[Sign Up & Accept]]></string>
    <string name="label_companies">Companies</string>
    <string name="label_1y">1Y</string>
    <string name="label_3m">3M</string>
    <string name="label_2m">2M</string>
    <string name="label_1m">1M</string>
    <string name="label_send">Send</string>
    <string name="label_go_to_sign_in">Go To Sign In</string>
    <string name="lable_version">Version</string>
    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="label_terms_and_conditions">Terms and Conditions</string>
</resources>